apps/sabnzbd/sabnzbd-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sabnzbd
spec:
  serviceName: sabnzbd
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
        tier: downloader
    spec:
      containers:
        - name: sabnzbd
          image: localhost:32000/sabnzbd
          args:
            - --no-login
          ports:
            - name: sabnzbd
              containerPort: 8080
          volumeMounts:
            - name: sabnzbd
              subPath: downloads
              mountPath: /downloads
            - name: sabnzbd
              subPath: watchdir
              mountPath: /watchdir
            - name: sabnzbd
              subPath: workdir
              mountPath: /downloads_temp
            - name: config
              mountPath: /config
          livenessProbe:
            httpGet:
              path: /staticcfg/ico/android-192x192.png
              port: 8080
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /staticcfg/ico/android-192x192.png
              port: 8080
              scheme: HTTP
      volumes:
        - name: sabnzbd
          persistentVolumeClaim:
            claimName: sabnzbd
        - name: logs
          emptyDir: {}
        - name: config
          emptyDir: {}
        - name: config-readonly
          configMap:
            name: sabnzbd-config
            items:
              - key: sabnzbd.ini
                path: sabnzbd.ini
