apps/sabnzbd/sabnzbd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  type: ClusterIP
  selector:
    app: sabnzbd
  ports:
    - name: sabnzbd
      port: 80
      targetPort: 8080
