apps/sabnzbd/sabnzbd-ext-ing.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: sabnzbd-ext

  labels:
    type: external
    authentified: "true"
spec:
  tls:
    - hosts:
        - sabnzbd.{hostname}
      secretName: sabnzbd.ing.cert
  rules:
    - host: sabnzbd.{hostname}
      http:
        paths:
          - backend:
              service:
                name: sabnzbd
                port:
                  number: 80
            path: /
            pathType: Prefix
