apps/sabnzbd/sabnzbd-local-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sabnzbd-local
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    type: local
spec:
  rules:
    - host: sabnzbd.local
      http:
        paths:
          - backend:
              serviceName: sabnzbd
              servicePort: 80
            path: /
